Move stuff around to make deploying more server easier

--- a/octav/Makefile
+++ b/octav/Makefile
@@ -2,20 +2,10 @@ EXTRA_TAGS       =
 OCTAV_EXECUTABLE = octav
 INTERNAL_BIN_DIR = _internal_bin
 INTERNAL_CMDS    = gendb genmodel gentransport genoctavctl
-GCLOUD_CONFIG_DIR = .gcloud
-CLOUDSQL_DIR=$(GCLOUD_CONFIG_DIR)/sql
-CLOUDSQL_ADDRESS_FILE = $(CLOUDSQL_DIR)/address
-CLOUDSQL_ADDRESS = $(shell cat $(CLOUDSQL_ADDRESS_FILE))
-CLOUDSQL_SSL_FILES    = \
-	$(CLOUDSQL_DIR)/server-ca.pem \
-	$(CLOUDSQL_DIR)/client-key.pem \
-	$(CLOUDSQL_DIR)/client-cert.pem
 GOVERSION=$(shell go version)
 GOOS=$(word 1,$(subst /, ,$(word 4, $(GOVERSION))))
 GOARCH=$(word 2,$(subst /, ,$(word 4, $(GOVERSION))))
 BIN_DIR=$(CURDIR)/_bin/$(GOOS)/$(GOARCH)
-
-CONTAINER_DIR=$(CURDIR)/gke/containers
 
 ifndef OCTAV_DB_NAME
 	OCTAV_DB_NAME = octav
@@ -23,17 +13,17 @@ endif
 
 SRC_FILES = $(wildcard *.go validator/*.go client/*.go db/*.go model/*.go)
 
-GO_TEST_CMD      = OCTAV_TEST_DSN="root:@/$(OCTAV_DB_NAME)?parseTime=true" go test -v $(GO_TAGS_OPT)
-ifdef OCTAV_TEST_DSN
-	GO_TEST_CMD = go test -v $(GO_TAGS_OPT)
+GO_TEST=go test -v $(GO_TAGS_OPT) $(shell glide novendor)
+ifndef OCTAV_TEST_DSN
+GO_TEST:= OCTAV_TEST_DSN="root:@/$(OCTAV_DB_NAME)?parseTime=true" $(GO_TEST)
 endif
 
-.PHONY: install_deps build_internal_cmd generate build run all clean test init_db gke-apiserver
+.PHONY: install_deps build_internal_cmd generate build run all clean test init-db gke-apiserver
 
 all: test build
 
 install_deps:
-	go get -d -v -t $(GO_TAGS_OPT) ./...
+	@glide up
 
 $(INTERNAL_BIN_DIR)/%: internal/cmd/%/*.go
 	@echo "Building $(@F)..."
@@ -47,11 +37,11 @@ $(INTERNAL_BIN_DIR)/hsup:
 build_internal_cmd: $(patsubst %,$(INTERNAL_BIN_DIR)/%, $(INTERNAL_CMDS))
 
 generate: build_internal_cmd
-	@echo "go generate ./..."
-	@PATH=$(CURDIR)/_internal_bin:$(PATH) go generate ./...
+	@echo "go generate ."
+	@PATH=$(CURDIR)/_internal_bin:$(PATH) go generate .
 
 test: generate buildspec
-	$(GO_TEST_CMD) ./...
+	$(GO_TEST)
 
 $(BIN_DIR)/octav: cmd/octav/octav.go $(SRC_FILES)
 	@echo "Building $(@F) for $(GOOS)/$(GOARCH)..."
@@ -78,49 +68,5 @@ clean:
 	-rm _internal_bin/*
 	-rm -rf _bin/*
 
-init_db:
-	mysql -u root -e "DROP DATABASE IF EXISTS $(OCTAV_DB_NAME)"
-	mysql -u root -e "CREATE DATABASE $(OCTAV_DB_NAME)"
-	mysql -u root octav < sql/octav.sql
-
-k8s-bootstrap:
-	./devtools/k8s-bootstrap.sh
-
-k8s-shutdown:
-	./devtools/k8s-shutdown.sh
-
-$(CLOUDSQL_ADDRESS_FILE):
-ifeq (,$(wildcard $@))
-	@echo "Missing '$@'"
-	@echo "CloudSQL address needed. Please ask a builderscon admin to provide it for you"
-	@exit 1
-endif
-
-$(CLOUDSQL_SSL_FILES):
-ifeq (,$(wildcard $@))
-	@echo "Missing '$@'"
-	@echo "CloudSQL requires SSL certificates to connect. Please ask a builderscon admin to provide one for you"
-	@exit 1
-endif
-
-cloudsql_files: $(CLOUDSQL_ADDRESS_FILE) $(CLOUDSQL_SSL_FILES)
-
-cloudsql: cloudsql_files
-	@echo "Connecting to mysql..."
-	mysql -uroot -h $(CLOUDSQL_ADDRESS) -p --ssl-ca=$(GCLOUD_CONFIG_DIR)/sql/server-ca.pem --ssl-cert=$(GCLOUD_CONFIG_DIR)/sql/client-cert.pem --ssl-key=$(GCLOUD_CONFIG_DIR)/sql/client-key.pem
-
-# This rule creates a secrets file so that it can be fed into kubectl.
-# We go through this hoopla to create the secret so that we don't have to
-# commit extra files that otherwise may reveal sensitive information.
-#
-# Kubernetes site shows that you can do this from the kubectl command line
-# alone, but as of this writing at least kubectl that comes with the
-# gcloud toolset doesn't, so... this workaround
-cloudsql_secret: cloudsql_files
-	./devtools/make_cloudsql_secret.sh | kubectl create -f -
-
-gke-apiserver:
-	$(MAKE) -C $(CONTAINER_DIR)/apiserver clean
-	$(MAKE) -C $(CONTAINER_DIR)/apiserver docker DEBUG=1
-	$(MAKE) -C $(CONTAINER_DIR)/apiserver publish-deploy
-
+init-db:
+	$(MAKE) -C ../ init-db
