--- a/octav/Makefile
+++ b/octav/Makefile
@@ -12,11 +12,6 @@ endif
 
 SRC_FILES = $(wildcard *.go validator/*.go client/*.go db/*.go model/*.go)
 
-GO_TEST=go test -v $(GO_TAGS_OPT) $(shell glide novendor)
-ifndef OCTAV_TEST_DSN
-GO_TEST:= OCTAV_TEST_DSN="root:@/$(OCTAV_DB_NAME)?parseTime=true" $(GO_TEST)
-endif
-
 .PHONY: installdeps build_internal_cmd generate build run all clean test initdb gke-apiserver $(INTERNAL_BIN_DIR)/glide
 
 all: test build
@@ -36,16 +31,15 @@ $(INTERNAL_BIN_DIR)/hsup: $(INTERNAL_BIN_DIR)
 	@go get -d github.com/lestrrat/go-hsup
 	@go build -o $@ github.com/lestrrat/go-hsup/cmd/hsup
 
-$(INTERNAL_BIN_DIR)/glide: $(INTERNAL_BIN_DIR)
-	@echo "Install glide for $(GOOS)/$(GOARCH)..."
-	@$(MAKE) $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH)
+$(INTERNAL_BIN_DIR)/glide: $(INTERNAL_BIN_DIR) $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH)
 
 $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH):
+	@echo "Installing glide for $(GOOS)/$(GOARCH)..."
 	@wget -O - https://github.com/Masterminds/glide/releases/download/0.10.0/glide-0.10.0-$(GOOS)-$(GOARCH).tar.gz | tar xvz
 	@mv $(GOOS)-$(GOARCH)/glide $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH)
 	@rm -rf $(GOOS)-$(GOARCH)
-	@ln -sf $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH) $(INTERNAL_BIN_DIR)/glide 
-	find $(INTERNAL_BIN_DIR)
+	@ln -sf glide-$(GOOS)-$(GOARCH) $(INTERNAL_BIN_DIR)/glide 
+	PATH=$(INTERNAL_BIN):$PATH which glide
 
 build_internal_cmd: $(patsubst %,$(INTERNAL_BIN_DIR)/%, $(INTERNAL_CMDS))
 
@@ -54,7 +48,7 @@ generate: build_internal_cmd
 	@PATH=$(CURDIR)/_internal_bin:$(PATH) go generate .
 
 test: generate buildspec
-	$(GO_TEST)
+	@OCTAV_TEST_DSN=$(OCTAV_TEST_DSN) go test -v $(GO_TAGS_OPT) $(shell glide novendor)
 
 $(BIN_DIR)/octav: cmd/octav/octav.go $(SRC_FILES)
 	@echo "Building $(@F) for $(GOOS)/$(GOARCH)..."
