--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -16,3 +16,6 @@ import:
 - package: golang.org/x/text
   subpackages:
   - language
+- package: github.com/stretchr/testify
+  subpackages:
+  - assert
