Authenticate user via github
Note, this is just a placeholder to make it easier for the time
being. We should not allow users to register via github on
this domain

--- a/gke/containers/adminweb/Dockerfile
+++ b/gke/containers/adminweb/Dockerfile
@@ -3,7 +3,7 @@ FROM debian
 ENV PATH=/local-lib/bin:/opt/perl/bin:$PATH
 ADD cpanfile /
 RUN apt-get update && \
-    apt-get install -qy --no-install-recommends wget build-essential ca-certificates && \
+    apt-get install -qy --no-install-recommends wget build-essential ca-certificates libssl-dev && \
     wget http://www.cpan.org/src/5.0/perl-5.20.3.tar.gz -O - | tar xz && \
     cd perl-5.20.3 && \
     ./Configure -de -Dprefix=/opt/perl -Dman1dir=none -Dman3dir=none -Doptimize='-O3' && \
