--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ install:
 script:
   - cd $DIR && ./travis.sh
 after_failure:
-  - test -e "$DIR/debug.out" && cat "$DIR/debug.out"
+  - echo "Checking out $DIR/debug.out" && test -e "$DIR/debug.out" && cat "$DIR/debug.out"
