Okay, that takes way too long. See if apt perl works

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ services:
 env:
   - TEST_DIR=octav
   - TEST_DIR=adminweb
+addons:
+  apt:
+    packages:
+      - cpanminus
+      - perl
 install:
   - echo "skipping install step"
 script:
