--- a/slackbot/Makefile
+++ b/slackbot/Makefile
@@ -4,6 +4,9 @@ GOOS=$(word 1,$(subst /, ,$(word 4, $(GOVERSION))))
 GOARCH=$(word 2,$(subst /, ,$(word 4, $(GOVERSION))))
 BIN_DIR=$(CURDIR)/_bin/$(GOOS)/$(GOARCH)
 
+installdeps:
+	@PATH=$(INTERNAL_BIN_DIR):$(PATH) glide up
+
 $(INTERNAL_BIN_DIR)/hsup:
 	@mkdir -p $(INTERNAL_BIN_DIR)
 	@echo "Building hsup..."
@@ -18,5 +21,20 @@ $(BIN_DIR)/slackbot-debug: cmd/slackbot/slackbot.go $(SRC_FILES)
 	@echo "Building $(@F) for $(GOOS)/$(GOARCH)..."
 	go build -tags debug0 -o $@ $<
 
+glide: $(INTERNAL_BIN_DIR)/glide
+
+$(INTERNAL_BIN_DIR)/glide: $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH)
+
+$(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH):
+	@mkdir -p $(INTERNAL_BIN_DIR)
+	@echo "Installing glide for $(GOOS)/$(GOARCH)..."
+	@wget -O - https://github.com/Masterminds/glide/releases/download/0.10.0/glide-0.10.0-$(GOOS)-$(GOARCH).tar.gz | tar xvz
+	@mv $(GOOS)-$(GOARCH)/glide $(INTERNAL_BIN_DIR)/glide-$(GOOS)-$(GOARCH)
+	@rm -rf $(GOOS)-$(GOARCH)
+	@ln -sf glide-$(GOOS)-$(GOARCH) $(INTERNAL_BIN_DIR)/glide 
+
 slackbot-debug: $(BIN_DIR)/slackbot-debug
+
+test:
+	@go test -v $(GO_TAGS_OPT) $(shell PATH=$(INTERNAL_BIN_DIR):$(PATH) glide novendor)
 
